<resources>
    <string name="app_name">Sprint00</string>
    <string name="title_tv">Sprint00</string>
    <string name="task1_btn">Task1</string>
    <string name="task2_btn">Task2</string>
    <string name="task3_btn">Task3</string>
    <string name="task4_btn">Task4</string>
    <string name="task5_btn">Task5</string>
    <string name="your_sample">Your sample</string>
    <string name="add_sample_btn">Add sample</string>
    <string name="remove_sample_btn">Remove sample</string>
    <string name="set_default">Set default</string>
    <string name="clean_btn">Clean</string>
    <string name="cumulative_frequency_text">Cumulative frequency:</string>
    <string name="relative_frequency_text">Relative frequency:</string>
    <string name="cumulative_relative_frequency_text">Cumulative relative frequency:</string>
</resources>