<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tv"
            android:layout_gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task1_btn" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task2_btn" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task3_btn" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task4_btn" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task5_btn" />

        <EditText
            android:id="@+id/samples_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/count_of_samples_hint"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:width="160dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/samples_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>