<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#C14E01AC"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sample_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/variation_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/variation_row_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/sample_span"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/cumulative_frequency_text"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cumulative_frequency_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/relative_frequency_text"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/relative_frequency_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/cumulative_relative_frequency_text"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cumulative_relative_frequency_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>